# IPP

Individual Programming Project/: .Doxyfile.in.swp  CMakeLists.txt  Doxyfile.in  MainPage.dox
Individual Programming Project/src/: auxiliary_structs.h  batch_mode.c  batch_mode.h  gamma.c  gamma.h  gamma_main.c  gamma_test.c  interactive_mode.c  interactive_mode.h  parsing.c  parsing.h  terminal_management.c  terminal_management.h
